# omega-ai-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-21T04-46-34-646Z.yml  page-2026-06-21T04-47-51-700Z.yml  page-2026-06-21T04-49-17-092Z.yml
omega/: __init__.py  cli.py  config.py
omega/agents/: base.py  browser.py  coder.py  critic.py  devops.py  executor.py  mcp.py  orchestrator.py  planner.py  researcher.py
omega/api/: server.py
omega/mcp/: manager.py
omega/memory/: store.py
omega/models/: router.py
omega/security/: manager.py
omega/tools/: api_tool.py  browser.py  database_tool.py  docker_tool.py  filesystem.py  git_tool.py  process_utils.py  registry.py  search_tool.py  terminal.py
omega/ui/: terminal.py
omega/workflows/: engine.py
scripts/: install.sh
tests/: conftest.py  test_memory.py  test_orchestrator.py  test_process_utils.py  test_router.py  test_security.py  test_tools.py
